implemented endpoints to get and save approved resources, decline requested resources